--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,7 +102,7 @@ services:
   backend:
     build:
       context: ./backend/
-      dockerfile: ./Dockerfile.dev
+      target: dev
     volumes:
       - ./backend/src:/app/src
       - ./backend/config:/app/config
@@ -125,6 +125,7 @@ services:
       - apparmor:unconfined
     environment:
       - NODE_CONFIG_ENV=docker_compose
+
   webhook-tester:
     image: tarampampam/webhook-tester
     command: serve --port 8082 --create-session 00000000-0000-0000-0000-000000000000
