Collapse modelscan Dockerfile.dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
   modelscan:
     build:
       context: ./lib/modelscan_api
-      dockerfile: ./Dockerfile.dev
+      target: dev
     volumes:
       - ./lib/modelscan_api/bailo_modelscan_api:/app/bailo_modelscan_api
     ports:
