--- a/backend/config/registry.conf
+++ b/backend/config/registry.conf
@@ -6,10 +6,10 @@ storage:
   cache:
     blobdescriptor: inmemory
   s3:
-    regionendpoint: http://minio:9000
+    regionendpoint: http://s3:9000
     bucket: registry
     secure: false
-    region: ignored-for-minio
+    region: ignored
     forcepathstyle: true
   redirect:
     disable: true
